ags (2.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMidiDialog non existing property use correct one "input-sequencer"
	* fixed free of unitialized GList in ags_effect_bridge.c
	* fixed DSSI and LV2 machines to use correct recall context

ags (2.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted previously introduced but in ags-capture-wave
	* fixed ags-play-wave wrong offset calculation
	* fixed output/input soundcard editor to reset audio channel to -1 if no soundcard
	* fixed automation editor SIGSEGV due to NULL pointer dereference
	* fixed missing port in automation editor
	* fixed all sorts of automation related issues

ags (2.0.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ability flags in sound generator machines related to channel scope

ags (2.0.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed some properties of AgsJackServer and AgsJackClient
	* fixed some properties of AgsPulseServer and AgsJackClient
	* fixed some properties of AgsCoreAudioServer
	* work-around for jack_port_set_name() resulting conflict as ags_soundcard_set_device()

ags (2.0.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed not thread-safe access to recall in ags_lv2_bridge.c
	* fixed freed not duplicated string
	* fixed double free in ags_bulk_member_finalize()

ags (2.0.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing audio data after capture default duration

ags (2.0.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing trailing audio after open wave

ags (2.0.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong recall access in AgsDssiBridge, AgsLv2Bridge, AgsLiveDssiBridge and AgsLiveLv2Bridge

ags (2.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_note_new_with_offset() prototype