@@ -216,7 +216,8 @@ ags_recall_dssi_init(AgsRecallDssi *recall_dssi)
   
   recall_dssi->bank = 0;
   recall_dssi->program = 0;
-  
+
+  recall_dssi->plugin = NULL;
   recall_dssi->plugin_descriptor = NULL;
 
   recall_dssi->input_port = NULL;
@@ -375,7 +376,14 @@ ags_recall_dssi_set_ports(AgsPlugin *plugin, GList *port)
 
   g_free(filename);
   g_free(effect);
+
+  /* set dssi plugin */
+  pthread_mutex_lock(recall_mutex);
+
+  recall_dssi->plugin = dssi_plugin;
   
+  pthread_mutex_unlock(recall_mutex);
+
   /* get base plugin mutex */
   pthread_mutex_lock(ags_base_plugin_get_class_mutex());
   
@@ -681,6 +689,13 @@ ags_recall_dssi_load_ports(AgsRecallDssi *recall_dssi)
 						  filename, effect);
   g_free(filename);
   g_free(effect);
+
+  /* set dssi plugin */
+  pthread_mutex_lock(recall_mutex);
+
+  recall_dssi->plugin = dssi_plugin;
+  
+  pthread_mutex_unlock(recall_mutex);
 
   /* get base plugin mutex */
   pthread_mutex_lock(ags_base_plugin_get_class_mutex());
