@@ -385,12 +385,12 @@ main(int argc, char **argv)
   g_log_set_fatal_mask("Gtk",
   		       G_LOG_LEVEL_CRITICAL);
 
-  g_log_set_fatal_mask("GLib-GObject",
-  		       G_LOG_LEVEL_WARNING | G_LOG_LEVEL_CRITICAL);
-
   g_log_set_fatal_mask(NULL,
   		       G_LOG_LEVEL_WARNING | G_LOG_LEVEL_CRITICAL);  
 #endif
+
+  g_log_set_fatal_mask("GLib-GObject",
+  		       G_LOG_LEVEL_WARNING | G_LOG_LEVEL_CRITICAL);
 
   /* setup */
   wdir = g_strdup_printf("%s/%s",
