@@ -4,6 +4,7 @@ ags (2.0.10)
 	* fixed AgsMidiDialog non existing property use correct one "input-sequencer"
 	* fixed free of unitialized GList in ags_effect_bridge.c
 	* fixed DSSI and LV2 machines to use correct recall context
+	* fixed dead-lock in ags_lv2_urid_manager.c
 
 ags (2.0.9)
 
